--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>mon super site </h1>
+    <h1>mon super site </h1> 
+    <h2>Bnjour</h2>
 </body>
 </html>
